[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.resemble_enhance"
version = "0.1.0"
description = "Resemble Enhance Extension"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "resemble-enhance @ git+https://github.com/rsxdalv/resemble-enhance@main",
    "numpy < 2",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.audio_separator"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
